--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <title>Movie App</title>
+    <title>FlickPedia</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
